--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,41 +4,23 @@
     <h1>BeerBank</h1>
   </div>
 </div>
-<div class="large-9 columns">
-  <ul class="left button-group">
-    <h4>Returning User? <a href="#" class="button">Log in with Facebook</a></h4>
-  </ul>
-  <ul class="right button-group">
-    <h4>New to BeerBank? <a href="#" class="button">Signup Now!</a></h4>
-  </ul>
-</div>
 
 <div class="row">
   <div class="large-12 columns">
     <div id="slider">
-      <img src="http://placehold.it/1000x400&text=[ img 1 ]"/>
+      <a href="#">
+        <img src="../images/beerbank-homepage.jpg">
+      </a>
     </div>
-
     <hr/>
   </div>
 </div>
 
 <div class="row">
-  <div class="large-12 columns">
-
-    <div class="panel">
-      <h4>Get in touch!</h4>
-
-      <div class="row">
-        <div class="large-9 columns">
-          <p>We'd love to hear from you, you attractive person you.</p>
-        </div>
-        <div class="large-3 columns">
-          <a href="#" class="radius button right">Contact Us</a>
-        </div>
-      </div>
-    </div>
-
+  <div class="large-3 large-centered columns">
+    <ul class="button-group even-3">
+      <a href="#" class="button">Log in with Twitter</a>
+    </ul>
   </div>
 </div>
 
@@ -48,14 +30,6 @@
     <div class="row">
       <div class="large-6 columns">
         <p>© Copyright Creative License, LLC 2015</p>
-      </div>
-      <div class="large-6 columns">
-        <ul class="inline-list right">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
-        </ul>
       </div>
     </div>
   </div>
