--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <body>
 <div class="row">
-  <div class="large-3 columns">
-    <h1>BeerBank</h1>
+  <div class="large-12 columns">
+    <h2>BeerBank, remember what you like!</h2>
   </div>
 </div>
 
@@ -9,7 +9,7 @@
   <div class="large-12 columns">
     <div id="slider">
       <a href="#">
-        <img src="../images/beerbank-homepage.jpg">
+        <%= image_tag "beerbank_banner-1.jpg" %>
       </a>
     </div>
     <hr/>
@@ -19,7 +19,7 @@
 <div class="row">
   <div class="large-3 large-centered columns">
     <ul class="button-group even-3">
-      <a href="#" class="button">Log in with Twitter</a>
+      <%= link_to "Login with Twitter", login_path, class: "button success button" %>
     </ul>
   </div>
 </div>
