--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 <header class="hero">
   <h1>BeerBank. Remember what you like.
   <br>
-  </br>
+  <br>
   <div class="row">
     <div class="small-12 columns">
-      <%= link_to "Login with Twitter", login_path, class: "button button round" %>
+      <%= link_to "Login with Twitter", login_path, class: "button" %>
     </div>
   </div>
   </h1>
