--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @mixin vertical-align {
   position: relative;
-  top: 50%;
+  top: 45%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -37,5 +37,26 @@
       font-size: 0.875rem;
       margin: 0;
     }
+  }
+}
+
+$gradient: linear-gradient(45deg, white, yellow);
+$gradient2: linear-gradient(45deg, orange, red);
+
+.button {
+  color: transparent;
+  font-size: 1.5rem;
+  letter-spacing: 3px;
+  border: 4px solid transparent;
+  border-image: $gradient;
+  border-image-slice: 1;
+  background: $gradient;
+  -webkit-background-clip: text;
+  text-fill-color: transparent;
+  transition: all 0.2s ease;
+
+  &:hover {
+    border-image: $gradient2;
+    background: $gradient2;
   }
 }
