added api client for brewerydb. added description column to beers model. some styling for beers/index and beers/show.

--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -1,3 +1,33 @@
-// Place all the styles related to the Beers controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// larger screen styles
+.has-form {
+  position: absolute;
+  top: 0;
+  left: 6rem; // adjust distance from left here
+  min-width: 14rem; // adjust width here
+
+  @media only screen and (max-width: 40em) {
+    min-width: 10rem;
+    top: 0.5rem;
+
+    .button {
+      height: 1.85rem;
+    }
+  }
+}
+
+@media only screen and (min-width: 40em) {
+
+  .top-bar {
+    text-align: center;
+  }
+
+  ul.center-buttons {
+    display: inline-block;
+  }
+}
+
+// some mobile resets
+
+.top-bar.expanded {
+  background: #333333;
+}
