--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -6,10 +6,12 @@
     <li class="has-form">
       <div class="row collapse">
         <div class="large-8 small-9 columns">
-          <input type="text" placeholder="Find a Beer">
+          <%= form_for :beer, url: '/beers/show', method: :get do |f| %>
+            <%= f.text_field :name, placeholder: 'Find A Beer' %>
         </div>
         <div class="large-4 small-3 columns">
-          <a href="/beers/show" class="alert button expand">Search</a>
+          <%= f.submit 'Search', class: 'alert button expand' %>
+          <% end %>
         </div>
       </div>
     </li>
@@ -30,6 +32,11 @@
 </nav>
 
 <div class="large-12 columns">
-  <h4>Hi <%= current_user.name %>. You have <%= Beer.count %> beers in your list.</h4>
+  <h4>Hi <%= current_user.name %>. You have <%= Beer.all.count %> beers in your list.</h4>
+  <!--<ul>-->
+    <!--<#% @beers.each do |beer| %>-->
+    <!--<li><#%= "#{beer.name} - ABV: #{beer.abv} - IBU:#{beer.ibu}%" %></li>-->
+    <!--<#% end %>-->
+  <!--</ul>-->
 </div>
 
