--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -2,8 +2,16 @@
 .beers_background {
   background: asset-data-url("beerBackground-5.jpg") no-repeat center center;
   background-size: cover;
-  height: 100vh;
+  height: 95vh;
   overflow: hidden;
+  .button {
+    color: white;
+  }
+}
+
+.list-page {
+  background: asset-data-url("beerbank-repeat-1.jpg") no-repeat center center;
+  background-size: cover;
 }
 
 .has-form {
@@ -15,8 +23,6 @@
   @media only screen and (max-width: 40em) {
     min-width: 10rem;
     top: 0.5rem;
-
-
   }
 }
 
@@ -41,7 +47,7 @@ $gradient: linear-gradient(45deg, white, yellow);
 $gradient2: linear-gradient(45deg, orange, red);
 
 .button {
-  color: transparent;
+  color: white;
   font-size: 1.5rem;
   letter-spacing: 3px;
   border: 4px solid transparent;
@@ -60,4 +66,28 @@ $gradient2: linear-gradient(45deg, orange, red);
 
 .smallbox {
   max-width: 100px;
+}
+
+.edit-label {
+  color: white;
+}
+
+.bubble {
+  position: relative;
+  width: 100px;
+  height: 130px;
+  text-align: center;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  line-height: 40px;
+  background-color: lightyellow;
+  border: 5px solid darkslategray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 2px 4px #888;
+  -moz-box-shadow: 2px 2px 4px #888;
+  box-shadow: 2px 2px 4px #888;
 }
