--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -2,16 +2,16 @@
   <section class="top-bar-section">
     <ul class="buttons">
       <li class="divider"></li>
-      <li><%= link_to "Back to BeerBank", beers_path, class: "button" %></li>
+      <li><%= button_to "Back to BeerBank", beers_path, class: "button", method: "get" %></li>
       <li class="divider"></li>
       <li>
       <%= form_for(:beer, url: beers_path) do |f| %>
-      <%= f.hidden_field :name, value: @beer['name'] %>
-      <%= f.hidden_field :rating, value: "Unrated" %>
-      <%= f.hidden_field :abv, value: @beer['abv'] %>
-      <%= f.hidden_field :ibu, value: @beer['ibu'] %>
-      <%= f.hidden_field :description, value: @beer['description'] %>
-      <%= f.submit "Add to List" %>
+        <%= f.hidden_field :name, value: @beer['name'] %>
+        <%= f.hidden_field :rating, value: "Unrated" %>
+        <%= f.hidden_field :abv, value: @beer['abv'] %>
+        <%= f.hidden_field :ibu, value: @beer['ibu'] %>
+        <%= f.hidden_field :description, value: @beer['description'] %>
+        <%= f.submit "Add to List", class: "button" %>
       <% end %>
       </li>
       <li class="divider"></li>
