--- a/app/views/beers/edit.html.erb
+++ b/app/views/beers/edit.html.erb
@@ -9,6 +9,7 @@
 <div class="beers_background">
   <div class="large-12 columns">
     <h2>EDIT THIS BEER</h2>
+  <% cache do %>
     <h3><%= "#{@beer["name"]} - ABV: #{@beer["abv"]}% - IBU: #{@beer["ibu"]}" %></h3>
     <h5><%= @beer.description %></h5>
   </div>
@@ -24,6 +25,7 @@
       <%= f.label "description", class: "edit-label" %>
       <%= f.text_area :description, value: @beer["description"] %>
       <%= f.submit "Save Changes", class: "button" %>
+    <% end %>
     <% end %>
   </div>
 </div>
