--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -17,7 +17,7 @@
     </li>
   </ul>
 </nav>
-<div class="list-page">
+<div class="beers_background">
 <div class="large-12 large-centered columns">
   <br>
   <% cache(action: "index", action_suffix: "beers-count") do %>
