restyled beer index

--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -85,8 +85,8 @@ $gradient2: linear-gradient(45deg, orange, red);
   padding-left: 10px;
   padding-right: 10px;
   line-height: 40px;
-  background-color: lightyellow;
-  border: 5px solid darkslategray;
+  background-color: transparent;
+  border: 5px solid yellow;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
