--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1497,15 +1497,15 @@ $include-html-global-classes: $include-html-classes;
 }
 
 .title-text {
-  color: darkslategray;
+  color: black;
 }
 
 a {
-  color: darkslategray;
+  color: black;
 }
 
 a:hover {
-  color: firebrick;
+  color: white;
 }
 
 .list-page {
