resized and restyled some pages for demo

--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -84,9 +84,9 @@ $gradient2: linear-gradient(45deg, orange, red);
   padding-bottom: 3px;
   padding-left: 10px;
   padding-right: 10px;
-  line-height: 40px;
-  background-color: transparent;
-  border: 5px solid yellow;
+  line-height: 50px;
+  background-color: lightgrey;
+  border: 5px solid black;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
